fix sizing on youtube vid on small screens

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -42,6 +42,15 @@
   .nav-link {
     font-size: 15px;
   }
+
+  .video-responsive iframe {
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    /* position: absolute; */
+  }
+
 }
 
 
